# net-monitor

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/bandwidth_tracker/: bytes.rs  history_buffer.rs  mod.rs  state.rs  tracker.rs
src/bpf/: packet_size.bpf.c  probs.rs
src/bpf/.output/: packet_size.skel.rs
src/tui/: events.rs  mod.rs  render.rs  state.rs
