[package]
name = "net-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.19"
crossterm = "0.27.0"
libbpf-rs = "0.25.0"
procfs = "0.15.1"
ratatui = "0.24.0"

[build-dependencies]
libbpf-cargo = "0.25.0"
