[package]
name = "net-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "5.1.6"
crossterm = "0.29.0"
libbpf-rs = "0.25.0"
procfs = "0.18.0"
ratatui = "0.29.0"

[build-dependencies]
libbpf-cargo = "0.25.0"
